<resources>
    <string name="app_name">appFilms</string>
    <string name="vtrend">В тренде</string>
    <string name="novoe">Новое</string>
    <string name="opisFilm">Eliot is in his happy place, unaware that he is being possessed by the Monster.
        To have control over his body, Eliot must travel to the place that contains his greatest regret:
        turning down Quentin when he suggests he and Eliot should be together
        after their memories are restored of their life in past-Fillory,
        happily living together and raising a family.</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Пароль</string>
    <string name="comeIn">Войти</string>
    <string name="reg">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="tooPass">Повторите пароль</string>
    <string name="reg1">Зарегистрироваться</string>
    <string name="haveAnAcc">У меня уже есть аккаунт</string>
    <string name="look">Смотреть</string>
    <string name="trend">В тренде</string>
    <string name="neww">Новое</string>
    <string name="forYou">Для вас</string>
    <string name="the_magicians">The Magicians</string>
    <string name="opis">Описание</string>
    <string name="frame">Кадры</string>
    <string name="luciferName">Люцифер</string>
    <string name="luciferOpis">Заскучавший и несчастный повелитель преисподней Люцифер Морнингстар оставил свой престол и отправился в современный Лос-Анджелес, где основал ночной клуб «Lux».
        Очаровательный, харизматичный и дьявольски привлекательный Люцифер наслаждается отдыхом — вином, женщинами и музыкой, пока красивая поп-звезда не оказывается убитой на пороге его клуба.</string>
    <string name="gotName">Игра престолов</string>
    <string name="gotOpis">К концу подходит время благоденствия, и лето, длившееся почти десятилетие, угасает.
        Вокруг средоточия власти Семи королевств, Железного трона, зреет заговор, и в это непростое время король решает искать поддержки у друга юности Эддарда Старка.
        В мире, где все — от короля до наемника — рвутся к власти, плетут интриги и готовы вонзить нож в спину, есть место и благородству, состраданию и любви.
        Между тем никто не замечает пробуждение тьмы из легенд далеко на Севере — и лишь Стена защищает живых к югу от нее.</string>
    <string name="sexEduc">Sex Education</string>
    <string name="sexEducOpis">Cтеснительный и необщительный подросток-девственник Отис живёт с мамой, которая работает секс-терапевтом.
        Объединившись с одноклассницей Мэйв, Отис проводит сеансы терапии для своих сверстников, чтобы помочь им разобраться с неловкими и запутанными ситуациями.</string>
    <string name="reasonWhyName">13 причин почему</string>
    <string name="reasonWhyOpis">Однажды Клэй Дженсен находит на пороге своего дома коробку с аудиокассетами, записанными Ханной Бейкер.
        Он был влюблен в эту девушку в школе, пока она однажды не покончила жизнь самоубийством.
        В своих записях Ханна указала 13 причин, которые толкнули её на это. И Клэй — одна из них.</string>
    <string name="theWalkingDeadName">Ходячие мертвецы</string>
    <string name="theWalkingDeadOpis">Зомби-эпидемия захлестнула планету.
        Шериф Рик Граймс путешествует с семьей и небольшой группой выживших в поисках безопасного места.
        Но постоянный страх смерти каждый день приносит тяжелые потери, заставляя товарищей по несчастью чувствовать глубины человеческой жестокости.
        Рик пытается спасти близких и понимает, что всепоглощающий страх людей может быть опаснее ходячих мертвецов.</string>
    <string name="westWorldName">Мир Дикого Запада</string>
    <string name="westWorldOpis">В футуристическом парке развлечений «Мир Дикого Запада» специально сконструированные андроиды выполняют любые прихоти посетителей, чтобы те чувствовали безнаказанность и полную свободу действий.
        Если робота убили — не беда, техники его починят, сотрут память и снова поставят в строй, навстречу новому дню и новым людским прихотям.
        Но оказывается, что далеко не все роботы теряют воспоминания.</string>
    <string name="jessicaName">Джессика Джонс</string>
    <string name="jessicaOpis">После трагических событий, оборвавших короткую супергеройскую карьеру Джессики Джонс,
        девушка пытается восстановить свою личную жизнь и свою карьеру частного детектива,
        расследуя таинственную активность людей со сверхспособностями в Нью-Йорке.</string>
    <string name="constantinName">Константин</string>
    <string name="constantinOpis">Бывалый охотник на демонов и оккультист Джон Константин специализируется на задании жару аду.
        Вооруженный таинственными знаниями темных искусств и своим острым умом, он ведет неравную борьбу…ну или по крайней мере вел.
        Так как его душа уже все равно проклята и попадет в ад, он решает оставить жизнь борца за добро,
        но когда демоны нацеливаются на Лив, дочь одного из самых давних друзей Константина,
        он неохотно возвращается, и он сделает все возможное, чтобы спасти ее.</string>
</resources>